--- a/html-css/exos final/index.html
+++ b/html-css/exos final/index.html
@@ -43,7 +43,7 @@
                    meilleure façon.</p>
                    <div class="div2">
                     <a href="#">En savoir plus</a>
-                    <img src="./image/btn.png" alt="btn" width="20px">
+                    <img src="./image/btn.png" alt="btn" width="20px" height="20px">
                    </div>
             </div>
 
