--- a/html-css/exos final/index.html
+++ b/html-css/exos final/index.html
@@ -82,7 +82,7 @@
 
             <h2 class="ttr">Nos Services</h2>
 
-            <div>
+            <div class="service">
                 <div class="piscine">
                     <img src="./image/piscine.png" alt="piscine" width="30px" height="20px">
                     <h2>Piscine</h2>
@@ -122,7 +122,7 @@
 
             <div class="div1">
                 <h2>Ce que nos clients disent</h2>
-                <p>Nous avons de nombreux clients satisfaits qui ont réservé des vacances avec nous.</p>
+                <p class="p1">Nous avons de nombreux clients satisfaits qui ont réservé des vacances avec nous.</p>
             </div>
 
 
