--- a/html-css/extreme/index.html
+++ b/html-css/extreme/index.html
@@ -13,10 +13,10 @@
         <div class="tete">
         <img src="./image/Ultimelogo.png" alt="logo" height="72px" width="140">
         <div class="logo">
-<img  src="./image/Vector.png" alt="facebook" height="18px" width="18px"  >
-<img src="./image/Group.png" alt="twitter" height="18px" width="18px" >
-<img src="./image/Group (1).png" alt="mail" height="18px" width="18px" >
-<img src="./image/Vector (1).png" alt="cafe" height="18px" width="18px" >
+<div class="face"><img  src="./image/Vector.png" alt="facebook" height="18px" width="18px"  ></div>
+<div class="twitter"><img src="./image/Group.png" alt="twitter" height="18px" width="18px" ></div>
+<div class="mail"><img src="./image/Group (1).png" alt="mail" height="18px" width="18px" ></div>
+<div class="cafe"><img src="./image/Vector (1).png" alt="cafe" height="18px" width="18px" ></div>
 </div>
 
     </div>
@@ -71,66 +71,67 @@
             <p>les sports extrêmes ont toujours ébahus les pls réfrénés et tentés les plus braves.</p>
         </div>
         <div class="div2">
-            <div>
+            <div class="div3">
                 <p>Becoming a member provides you with the best opportunity to
                     secure tickets to watch our team in action, so don’t miss out on 
                     this opportunity.Every game this season has sold out on the first
                     day of sales for members, meaning there is no better way to give
                     yourself a chance of purchasing tickets.After friday 3 March,
                     you’ll not be able to buy a membership.</p>
-                    <a href="#">EN SAVOIR PLUS</a>
+                  <button>  <a href="#">EN SAVOIR PLUS</a></button>
             </div>
-            <div>
+            <div class="div4">
                 <p>Our Soccer Club anticipates a passionate atmosphere for
                     tonight’s game against Tottenham and we ask for the support to
                     remain respectful. Fans attending are also advised to arrive early
                     to ensure they are able to enter for kick-off at 8pm. Turnstiles will
                     open at approximately 6pm and all supporters are encouraged to 
                     be there in time.</p>
-                    <a href="#">EN SAVOIR PLUS</a>
+                   <button> <a href="#">EN SAVOIR PLUS</a></button>
             </div>
         </div>
     </article>
-    <section>
-        <div>
-            <div>
+    <section class="part3">
+        <div class="div1">
+            <div class="div2">
                 <img src="./image/camion.png" alt="camion">
                 <p>Livraison offerte
                     100% Garantie</p>
-                    <a href="#">EN SAVOIR PLUS</a>
+                   <button> <a href="#">EN SAVOIR PLUS</a></button>
             </div>
             <div>
                 <img src="./image/like.png" alt="like">
                 <p>Satisfaction
                     100% Garantie</p>
-                    <a href="#">EN SAVOIR PLUS</a>
+                    <button> <a href="#">EN SAVOIR PLUS</a></button>
             </div>
             <div>
                 <img src="./image/warning.png" alt="warning">
                 <p>Délai de retour
                     sous 14 jours</p>
-                    <a href="#">EN SAVOIR PLUS</a>
+                    <button><a href="#">EN SAVOIR PLUS</a></button>
             </div>
         </div>
     </section>
-    <section>
-        <div>
-            <div>
+    <section class="part4">
+        <div class="div1">
+            <div class="div2">
                 <h2>L’exploit du mois</h2>
                 <p>Il y a des performances qu’il ne faut pas rater, que l’on peut revoir des centaines de fois, réalisé en août
                     dernier dans un lieu splendide, l’énorme exploit que vous allez voir ici, fait partie de ceux-là.</p>
             </div>
-            <div>
-                <p>Un casting de rêve pour votre plus grand plaisir, le « kid » (Pablo
+            <div class="div3">
+            <div class="div4">
+                <p class="p1">Un casting de rêve pour votre plus grand plaisir, le « kid » (Pablo
                     Signoret), le « bandit » (Rafael Bridi) et le « pote qui doit tout
                     porter » (Guilherme Coury)</p>
-                    <p>Mais finalement quel est cet exploit, ce record dont nous vous
+                    <p class="p2">Mais finalement quel est cet exploit, ce record dont nous vous
                         parlons depuis le début ? Treaverser une slackline de 200 mètres,
                         tendue au-dessus du vide , à 3000 mètres d’altitude. Autant dire
                         que vous allez en prendre plein les yeux voire en reprendre pour
                         ceux d’entre vous qui ont déjà eu le plaisir de voir cette vidéo.</p>
             </div>
-            <div>
+            <div class="div5">
                 <p>« Cet endroit est unique, perdu dans les montagnes. L’aiguille
                     Dibona n’est pas comme les autres sommets français : c’est très
                     fin, très raide et c’est immense. Demandez à Pablo et Rafael et ils
@@ -141,20 +142,23 @@
                     des sacs de 25 à 40 kilos. » Pierre Chauffour, réalisateur</p>
             </div>
         </div>
+        </div>
     </section>
     <footer>
-        <div>
-            <div>
+        <div class="div1">
+            <div class="div2">
                 <img src="./image/logo_footer.png" alt="foot">
-                <p>Copyright 2017 © ULtime Extreme. All rights reserved</p>
-            </div>
-            <div>
+                
                 <ul>
                     <li>ULtime - Sports Extreme</li>
                     <li>168 Blv Curie | Calais | FRANCE</li>
                     <li>+ 0800 559 6580</li>
-                    <li>E-mail : mail@ultime.com</li>
+                    <li>E-mail : <span> mail@ultime.com </span></li>
                 </ul>
+            </div>
+            
+            <div class="div3">
+                <p>Copyright 2017 © ULtime Extreme. All rights reserved</p>
             </div>
         </div>
     </footer>
