--- a/bootsrap/boostrap/index (4).html
+++ b/bootsrap/boostrap/index (4).html
@@ -12,7 +12,8 @@
 
 </head>
 
-<body class="global-container h-100">
+<body class="global-container h-100 ">
+    
     <nav class="container-fluid navbar fixed-top bg-light text-center d-flex justify-content-center">
         <a class="navbar-brand text-dark fs-3 pe-3" href="#">Home</a>
         <a class="navbar-brand text-dark fs-3 pe-3" href="#">Features</a>
@@ -43,12 +44,12 @@
         </div>
 
     </header>
-    <section class="h-500px w-500px container-fluid">
-        <div class="d-flex flex-column align-items-center mt-5">
+    <section class="h-500px w-500px container">
+        <div class="d-flex flex-column align-items-center  mt-5 text-center">
             <h2 class="display-6">you can lean on us</h2>
             <h2 class="display-1">Our servers are robust.</h2>
         </div>
-        <div class=" container d-flex justify-content-center text-center p-5 mt-5 ">
+        <div class=" container d-flex  justify-content-center text-center p-5 mt-5 row row-cols-1 row-cols-md-3 g-4 ">
             <div class="col pe-5">
                 <img src="./images/chat.svg" alt="chat" height="150px">
                 <h2>Lorem, ipsum dolor.</h2>
@@ -77,7 +78,7 @@
             </div>
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col ">
-                    <div class="card bg-dark text-light w-75">
+                    <div class="card bg-dark text-light ">
                         <div class="card-body">
                             <h5 class="card-title fs-1 pt-4">Best hosting Award <br> 2022</h5>
                             <img src="./images/solar_cup-first-bold.png" alt="cup">
@@ -88,7 +89,7 @@
                     </div>
                 </div>
                 <div class="col ">
-                    <div class="card bg-warning text-dark w-75 h-100">
+                    <div class="card bg-warning text-dark ">
                         <div class="card-body">
                             <h5 class="card-title fs-1 pt-4">Fastest servers</h5>
                             <img src="./images/ph_wind-thin.png" alt="cup">
@@ -99,7 +100,7 @@
                     </div>
                 </div>
                 <div class="col ">
-                    <div class="card bg-primary text-light w-75 h-100 ">
+                    <div class="card bg-primary text-light  ">
                         <div class="card-body">
                             <h5 class="card-title fs-1 pt-4"> Best support 2019/2020</h5>
                             <img src="./images/emojione-v1_white-touch-tone-phone.png" alt="cup">
@@ -110,7 +111,7 @@
                     </div>
                 </div>
                 <div class="col ">
-                    <div class="card bg-light text-dark w-75 h-100">
+                    <div class="card bg-light text-dark ">
                         <div class="card-body">
                             <h5 class="card-title fs-1 pt-4"> Groundbreaking low <br> prices</h5>
                             <img src="./images/solar_cup-first-bold.png" alt="cup">
@@ -124,8 +125,9 @@
         </div>
 
     </section>
-    <section class="h-50 d-flex justify-content-center align-items-center text-light bg-dark text-center mt-5">
-        <div>
+    <section class=" h-50 d-flex justify-content-center align-items-center text-light  bg-dark text-center mt-5">
+        
+        <div class="parallax">
             <div>
                 <h2 class="display-2">It's now or never.</h2>
                 <h2 class="display-6 col-sm">you can do it.</h2>
@@ -135,14 +137,14 @@
         </div>
     </section>
     <section class="mt-5  container">
-        <div class="d-flex flex-column align-items-center justify-content-center">
+        <div class="d-flex  flex-column align-items-center justify-content-center ">
             <div class="text-center pb-5">
                 <h2 class="display-2">We are hosting those projects</h2>
                 <h3 class="display-6">World Class Websites</h2>
             </div>
-            <div class="row row-cols-1 row-cols-md-2 g-4 ">
-                <div class="card me-5" style="width: 18rem;">
-                    <img src="./images/robot.jpg" class="card-img-top" alt="...">
+            <div class="row row-cols-1  row-cols-md-2 row-cols-lg-5 g-4 justify-content-center align-items-center pt-2 pb-5 mt-md-5 mt-0 ">
+                <div class="card me-lg-5 " >
+                    <img src="./images/robot.jpg" class="card-img-top" alt="..." >
                     <div class="card-body">
                         <h5 class="card-title">Project</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -150,7 +152,7 @@
                         <a href="#" class="btn btn-primary">Take a look at it</a>
                     </div>
                 </div>
-                <div class="card me-5" style="width: 18rem;">
+                <div class="card me-lg-5">
                     <img src="./images/purpleish-pic.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Project</h5>
@@ -159,7 +161,7 @@
                         <a href="#" class="btn btn-primary">Take a look at it</a>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="./images/codebase.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Project</h5>
@@ -171,11 +173,11 @@
             </div>
         </div>
     </section>
-    <section class=" container mt-5">
+    <section class=" container  mt-5">
         <div class="d-flex align-items-center justify-content-center">
 
-            <div class="row row-cols-1 row-cols-md-2 g-4 ">
-                <div class="card me-5" style="width: 18rem;">
+            <div class="row row-cols-1  row-cols-md-2 row-cols-lg-5 g-4 justify-content-center align-items-center pt-2 pb-5 mt-md-5 mt-0  ">
+                <div class="card  me-lg-5">
                     <img src="./images/laptop.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Project</h5>
@@ -184,7 +186,7 @@
                         <a href="#" class="btn btn-primary">Take a look at it</a>
                     </div>
                 </div>
-                <div class="card me-5" style="width: 18rem;">
+                <div class="card me-lg-5">
                     <img src="./images/bright-laptop.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Project</h5>
@@ -193,7 +195,7 @@
                         <a href="#" class="btn btn-primary">Take a look at it</a>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <img src="./images/desk-work.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Project</h5>
@@ -211,9 +213,9 @@
                 <h2 class="display-2">Check our pricing tables.</h2>
                 <h3 class="display-6">We suit your needs.</h2>
             </div>
-            <div class="row row-cols-1 row-cols-md-2 g-4 ">
-                <div class="card me-5 bg-dark text-light" style="width: 18rem;">
-                    <div class="card-body">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-5 g-4 ">
+                <div class="card me-lg-5 bg-dark text-light col-lg-3">
+                    <div class="card-body ">
                         <h3 class="card-title pt-3 fs-1">Basic</h3>
                         <h3 class="fs-5 pt-3"> <span class="fs-1"> $9</span>/month</h3>
 
@@ -228,8 +230,8 @@
                         <a href="#" class="btn btn-outline-light w-100 mt-5">Select</a>
                     </div>
                 </div>
-                <div class="card me-5 bg-success text-light" style="width: 18rem;">
-                    <div class="card-body">
+                <div class="card me-lg-5 bg-success text-light col-lg-3 " >
+                    <div class="card-body ">
                         <h3 class="card-title pt-3 fs-1">Pro</h3>
                         <h3 class="fs-5 pt-3"> <span class="fs-1"> $19</span>/month</h3>
 
@@ -246,7 +248,7 @@
                         <a href="#" class="btn btn-outline-light w-100 mt-1">Select</a>
                     </div>
                 </div>
-                <div class="card me-5 bg-warning text-dark" style="width: 18rem;">
+                <div class="card me-lg-5 bg-warning text-dark col-lg-3  " >
                     <div class="card-body">
                         <h3 class="card-title pt-3 fs-1">Expert</h3>
                         <h3 class="fs-5 pt-3"> <span class="fs-1"> $39</span>/month</h3>
