--- a/DEMO-Java/AppMeteo/index.html
+++ b/DEMO-Java/AppMeteo/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,26 +10,27 @@
 </head>
 
 <body>
-   <div class="container">
-    <div class="f1">
-        <div>
-            <h1>Météo</h1>
-            <div class="f2">
-                <span id="ville">paris</span>
-                <div id="temperature">
-                    <span id="temperature_label">
-                        xx.x
-                    </span> °C
+    <div class="container">
+        <div class="f1">
+            <div>
+                <h1>Météo</h1>
+                <div class="f2">
+                    <div class="f4">
+                        <span id="ville">Paris</span>
+                        <div id="temperature">
+                            <span id="temperature_label">
+                                xx.x
+                            </span> °C
+                       
                 </div>
             </div>
         </div>
-    </div>
-    <div>
-        <div class="f3">
-            <button id="changer">changer</button>
+        <div>
+            <div class="f3">
+                <button id="changer">Changer</button>
+            </div>
         </div>
     </div>
-   </div>
     <script src="./script.js"></script>
 </body>
 
