--- a/port folio/index.html
+++ b/port folio/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
-<html class="h-100" lang="fr">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://bootswatch.com/5/vapor/bootstrap.min.css">
+    <link rel="stylesheet" href="./style.css">
     <title>PortFolio</title>
 </head>
-<body class="h-100"  >
+<body>
     <header>
-      <nav class="container-fluid navbar fixed-top bg-primary text-center d-flex justify-content-center ">
+      <nav class=" navbar fixed-top bg-primary text-center d-flex justify-content-center ">
         <a class="navbar-brand text-light fs-3 pe-3" href="#">Home</a>
         <a class="navbar-brand text-light fs-3 pe-3" href="#">Expérience</a>
         <a class="navbar-brand text-light fs-3 pe-3" href="#">Contact</a>
-        <a class="navbar-brand text-light fs-3 pe-3" href="#">Portfolio</a>
+        <a class="navbar-brand text-light fs-3 pe-3" href="#portefolio">Portfolio</a>
 
 
     </nav>
     </header>
 
-    <section class="h-100 w-500px pt-5 d-flex flex-row ms-5 align-items-center justify-content-around container-fluid">
-<div class="d-flex row row-cols-1 row-cols-md-2 g-4">
-  <div class=" ps-5  pt-5 d-flex flex-column justify-content-center col-8">
-<h2 class="text-light">LUCAS DEKINDT </h2>
-<img src="./images/image 5 (1).png" alt="" width="100%" height="50%">
-<h2 class="text-light text-end">développeur web</h2>
+    <section class=" section-1 h-100 w-500px pt-5 d-flex flex-row ms-5 align-items-center justify-content-around container-fluid">
+<div class=" div-1 d-flex row row-cols-1 row-cols-md-2 g-4">
+  <div class=" div-2 ps-5  pt-5 d-flex flex-column justify-content-center col-8">
+<h2 class="h2-1">LUCAS DEKINDT </h2>
+<img class="" src="./images/image 5 (1).png" alt="" width="100%" height="50%">
+<h2 class="h2-2">développeur web</h2>
 
   </div>
   <div class=" g-5 col-md-4 offset-md-2">
@@ -133,7 +132,7 @@
 
 
     </section>
-    <section class="h-100 w-500px mt-1 pt-5  ms-5   container-fluid">
+    <section id="portefolio">
         <div class="text-center pb-5">
             <h2 class="display-2">Portfolio</h2>
         </div>
