--- a/port folio/index.html
+++ b/port folio/index.html
@@ -29,7 +29,7 @@
 
   </div>
   <div class="">
-<img src="./images/67849342_3147394148634696_6530664680292089856_n 1.png" alt="">
+<img class="img-1" src="./images/67849342_3147394148634696_6530664680292089856_n 1.png" alt="">
   </div>
 </div>
 
@@ -114,12 +114,12 @@
         <div class="div-18">
 <div class=" div-14">
 </div>
-<a class="a2" href="./appmeteo/index.html" target="#"><h3>projet 1</h3></a>
+<a class="a3" href="./appmeteo/index.html" target="#"><h3>projet 1</h3></a>
 </div>
 <div class="div-18">
 <div class=" div-20 h-100 w-25 border border-5 rounded-circle ">
 </div>
-<a class="a2" href="./massif/index.html" target="#"><h3>projet 2</h3></a>
+<a class="a3" href="./massif/index.html" target="#"><h3>projet 2</h3></a>
 </div>
 <div class="div-18">
 <div class=" div-15 h-100 w-25 border border-5 rounded-circle ">
